# anagram_design

./: .gitignore  Cargo.toml  LICENSE  OPTIMIZATION.md  OPTIMIZATIONS.md  README.md  THOUGHTS.md  bug_report.md  run_server.sh
doc/: main.js
doc/pkg/: anagram_design.js  anagram_design_bg.wasm
docs/: index.html  main.js  styles.css
docs/pkg/: anagram_design.js  anagram_design_bg.wasm
src/: api.rs  constraints.rs  context.rs  cost.rs  dijkstra_solver.rs  format.rs  lib.rs  main.rs  merged.rs  node.rs  solver.rs  wasm.rs
